--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,5 @@
 [workspace]
-members = [
-    "src/program",
-]
+members = ["src/program"]
 
 [package]
 name = "digital-marketplace"
@@ -9,8 +7,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-digital-marketplace-program = { path = "src/program" }
+sdk = { path = "sdk" }
+anyhow = { version = "1", features = ["backtrace"] }
+borsh = { version = "1.4.0", features = ["derive"] }
+serde = { version = "1.0.198", features = ["derive"] }
+serde_json = "1.0.116"
+bitcoin = { git = "https://github.com/Arch-Network/bitcoin-arch-v2" }
 
-[[bin]]
-name = "digital-marketplace"
-path = "src/main.rs"
+[build-dependencies]
+risc0-build = "0.21.0"
+
+[dev-dependencies]
+#risc0-zkvm = "0.21.0"
